--- a/.env
+++ b/.env
@@ -6,4 +6,6 @@ TWILIO_SERVICE_ID=VA9d75feb46f1009d8fd45d6ab1e7c5d08
 TWILIO_ACCOUNT_SID=AC6b68a0baff9cda6115d732455e787405
 TWILIO_AUTH_TOKEN=15488eb759fed79e00b8617744529eed
 
+SENDGRID_API_KEY=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
+
 JWT_SECRET_KEY=test
