--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ TWILIO_AUTH_TOKEN=15488eb759fed79e00b8617744529eed
 SENDGRID_API_KEY=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
 
 JWT_SECRET_KEY=test
+
+BASIC_ROUTE=http://localhost:5000/
