--- a/.env
+++ b/.env
@@ -10,4 +10,4 @@ SENDGRID_API_KEY=SG.8Z3inyRpTluUJHs0z5O_uQ.kXf4NiNQv34ZtizK5Nm4zKxm2XsDU1JIdD3na
 
 JWT_SECRET_KEY=test
 
-BASIC_ROUTE=http://localhost:5000/
+BASIC_ROUTE=https://umersion-node-backend.herokuapp.com/
