--- a/.env
+++ b/.env
@@ -11,4 +11,5 @@ SENDGRID_API_KEY=SG.8Z3inyRpTluUJHs0z5O_uQ.kXf4NiNQv34ZtizK5Nm4zKxm2XsDU1JIdD3na
 JWT_SECRET_KEY=test
 
 BASIC_ROUTE=https://umersion-node-backend.herokuapp.com/
+; BASIC_ROUTE=http://localhost:5000/
 
